	object.

	* Upgraded to Rhino 1.7 release 2 + patch for bug #477233.

	* Added command line option --db-console to start H2's
	database console.

	* Added the "Hello world" and "The Ajax Blog" tutorials to the
	examples.

	* All-new look of error messages and file listings. No more
	references to esxx.org resources, everything is now embedded.

	* Updated to Saxon 9.0.0.8.

0.9.20090201
	* Fixed bug #14765: req.scriptURI has problems with encoded
	URI:s.

	* Fixed problems with the init script that made chkconfig not
	recognize it.

	* The XMIME/XMTP parser and serializer how handles all text/*
	MIME types, not just text/plain.

	* esxx.include now takes a secondary argument, scope, which
	can be used to specify in what scope the included file should 
	be evaluated in.  If unspecified, the global scope is used
	just like before.

	* When using esxx.include from a function, files are now
	first resolved relative the working directory.

	* esxx.global is now available, and refers to the global
	scope.
	
	* The HTTP protocol handler now simply throws an ESXX.Response
	object if the HTTP status in load(), save(), append() or
	remove() is not 2xx.

	* Added IPS (OpenSolaris) package support, including SVC
	management script and manifest.

	* Added proper PackageMaker (OSX), DEB and RPM support. CPack
	is now only used for the Windows packages.

	* Added ESXX.Response methods: toString(), valueOf() and
	[from Java] getDefaultValue().

	* Added a dns: URI protocol handler, with LDAP URI-inspired
	query part.

	* The --no-handler option now takes a regex argument which
	is matched against SERVER_SOFTWARE. This makes it possible
	to use both Apache and Lighttpd with the same ESXX server
	by specifying "--no-handler=lighttpd.*" (which happens to
	be the default, so you don't actually have to specify it).

	* SOAP handlers can now match on SOAPAction and URI just like
	HTTP handlers.

	* XSLT stylesheets can now match on content type and URI,