@@ -37,6 +37,8 @@
 
 	* Updated to Saxon 9.0.0.8.
 
+	* Added an uninstall script for OSX.
+
 0.9.20090201
 	* Fixed bug #14765: req.scriptURI has problems with encoded
 	URI:s.
